--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
-    "styled-components": "4.4.1"
+    "styled-components": "4.4.1",
+    "redux-saga": "1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
